force-app/main/default/objects/Case/fields/Case_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Text__c</fullName>
    <description>Field to determine text value of Case Reason.</description>
    <formula>TEXT(Reason)</formula>
    <label>Case Reason Text</label>
    <type>Text</type>
</CustomField>