force-app/main/default/objects/Case/fields/Command_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Command_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has Command been contacted regarding this case?</inlineHelpText>
    <label>Command Contacted</label>
    <type>Checkbox</type>
</CustomField>