force-app/main/default/objects/Case/fields/Deployment_FRG__c.field-meta.xml
<CustomField>
    <fullName>Deployment_FRG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployment/FRG</label>
    <type>Checkbox</type>
</CustomField>