force-app/main/default/objects/Case/fields/EFMP__c.field-meta.xml
<CustomField>
    <fullName>EFMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFMP</label>
    <type>Checkbox</type>
</CustomField>