force-app/main/default/objects/Case/fields/Emergency_Crisis__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Crisis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency/Crisis</label>
    <type>Checkbox</type>
</CustomField>