force-app/main/default/objects/Case/fields/Financial_Pay__c.field-meta.xml
<CustomField>
    <fullName>Financial_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial/Pay</label>
    <type>Checkbox</type>
</CustomField>