force-app/main/default/objects/Case/fields/Individual_Augmentee__c.field-meta.xml
<CustomField>
    <fullName>Individual_Augmentee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Augmentee</label>
    <type>Checkbox</type>
</CustomField>