force-app/main/default/objects/Case/fields/Military_Records__c.field-meta.xml
<CustomField>
    <fullName>Military_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military Records</label>
    <type>Checkbox</type>
</CustomField>