force-app/main/default/objects/Case/fields/MWR__c.field-meta.xml
<CustomField>
    <fullName>MWR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MWR</label>
    <type>Checkbox</type>
</CustomField>