force-app/main/default/objects/Case/fields/Newsetter__c.field-meta.xml
<CustomField>
    <fullName>Newsetter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsetter</label>
    <type>Checkbox</type>
</CustomField>