force-app/main/default/objects/Case/fields/Other_Info_Referral__c.field-meta.xml
<CustomField>
    <fullName>Other_Info_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Info &amp; Referral</label>
    <type>Checkbox</type>
</CustomField>