force-app/main/default/objects/Case/fields/Red_Cross_Message__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Cross Message</label>
    <type>Checkbox</type>
</CustomField>