force-app/main/default/objects/Case/fields/Relocation_Housing_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Housing_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relocation/Housing/Sponsor</label>
    <type>Checkbox</type>
</CustomField>