force-app/main/default/objects/Case/fields/Sailor__c.field-meta.xml
<CustomField>
    <fullName>Sailor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sailor about whom this case is concerned.</inlineHelpText>
    <label>Sailor</label>
    <referenceTo>Sailor__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>