force-app/main/default/objects/Case/fields/Sexual_Assault_Prevention__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Assault_Prevention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sexual Assault Prevention</label>
    <type>Checkbox</type>
</CustomField>