force-app/main/default/objects/Case/listViews/All_OCC_Cases.listView-meta.xml
<ListView>
    <fullName>All_OCC_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All OCC Cases</label>
</ListView>