force-app/main/default/objects/Case/listViews/MyOCCOpenCases.listView-meta.xml
<ListView>
    <fullName>MyOCCOpenCases</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My OCC Open Cases</label>
</ListView>